--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 body{
     margin: 0;
     font-family: 'Inter', sans-serif;
-    background-image: -webkit-linear-gradient(hsl(225, 100%, 98%) 15%,hsl(0, 0%, 100%) 15%);
+    background-image: -webkit-linear-gradient(hsl(225, 100%, 98%) 10%,hsl(0, 0%, 100%) 10%);
     padding: 2% 8%;
 }
 /********************************* Grid View  *************************/
@@ -54,14 +54,18 @@ hr{
     display: flex;
     flex-direction: row;
     justify-content: space-between; 
-    align-items: center;   
+    align-items: center;
 }
 .toggle-bar{
     width: 3.125rem;
     height: 1.5625rem;
     border-radius: 0.8125rem;
-    background-color: hsl(230, 22%, 74%);
+    background-color: rgba(174, 179, 203,1);
     position: relative;
+}
+.toggle-bar:hover{
+    background-image: -webkit-linear-gradient(0deg,hsl(210, 78%, 56%),hsl(146, 68%, 55%));
+    cursor: pointer;
 }
 .toggle-bar div{
     width: 1.25rem;
@@ -70,9 +74,12 @@ hr{
     background-color: white;
     position: absolute;
     right: 0.1875rem;
-    top: 0.125rem;
+    top: 0.125rem;  
+    transition: right 0.3s ease-in-out;
 }
-
+div.toggle-mode{
+    right: 1.6875rem;
+}
 
 /****************************** Social Media Cards ********************************/
 .cards{
@@ -87,6 +94,11 @@ hr{
     border-radius: 0.3125rem;
     text-align: center;
     margin: 0.625rem 0;
+}
+.card:hover, .instagram:hover{
+    background-color: hsl(227, 47%, 90%);
+    transition: background-color 0.5s;
+    cursor: pointer;
 }
 .username{
     position: relative;
@@ -165,6 +177,11 @@ h2{
     margin: 0.625rem 0;
     padding: 1.25rem;
 }
+.stat-card:hover{
+    background-color: hsl(227, 47%, 90%);
+    transition: background-color 0.5s;
+    cursor: pointer;
+}
 .stat-card > div{
     display: flex;
     flex-direction: row;
@@ -211,11 +228,25 @@ h2{
     .col-md-10{ width: 83.33%;}
     .col-md-11{ width: 91.63%;}
     .col-md-12{ width: 100%;}
+    hr{
+        display: none;
+    }
+    body{
+        background-image: -webkit-linear-gradient(hsl(225, 100%, 98%) 15%,hsl(0, 0%, 100%) 15%);
+        padding: 3% 8%;
+    }
+    .header-flex{
+        justify-content: flex-end;
+    }
+    #dark-mode{
+        margin-right: 1rem;
+    }
+
 }
 
 
 /* For Large Devies */
-@media only screen and (min-width: 768px){
+@media only screen and (min-width: 900px){
     
     .col-lg-1{ width: 8.33%;}
     .col-lg-2{ width: 16.66%;}
@@ -229,48 +260,27 @@ h2{
     .col-lg-10{ width: 83.33%;}
     .col-lg-11{ width: 91.63%;}
     .col-lg-12{ width: 100%;}
-    header{
-        justify-content: space-between;
+    hr{
+        display: none;
+    }
+    body{
+        background-image: -webkit-linear-gradient(hsl(225, 100%, 98%) 25%,hsl(0, 0%, 100%) 25%);
+        padding: 3% 8%;
     }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .attribution {
-    font-size: 11px;
+    font-size: 0.8125rem;
     text-align: center;
+    color:hsl(228, 12%, 44%);
+    font-weight: 700;
+    margin-top: 1.25rem;
 }
-.attribution a {
+.attribution a{
+    text-decoration: none;
+    color:hsl(228, 12%, 44%);
+}
+a:hover {
+    transition: color 0.5s;
     color: hsl(228, 45%, 44%);
 }
